발암물질이드아

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -19,18 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "얼어디지겠다\n",
+      "얼어디지겠다\n",
       "얼어디지겠다\n"
      ]
     }
    ],
    "source": [
+    "print(\"얼어디지겠다\")\n",
+    "print(\"얼어디지겠다\")\n",
     "print(\"얼어디지겠다\")"
    ]
   },
