--- a/test_11.ipynb
+++ b/test_11.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "값을 입력해주세요\n",
+      "20\n",
+      "30\n",
+      "값을 입력해주세요\n",
+      "40\n"
+     ]
+    }
+   ],
    "source": [
     "'''사용자로부터 숫자를 계속 입력받다가\n",
     "s or S 를 입력하면 합계출력\n",
@@ -17,8 +29,26 @@
     "값을 입력해주세요s\n",
     "합계는 ?  170\n",
     "\n",
-    "'''"
+    "'''\n",
+    "\n",
+    "total = 0\n",
+    "while(1):\n",
+    "    print('값을 입력해주세요')\n",
+    "    input_1 = input()\n",
+    "    if input_1 == 's' or input_1 == 'S':\n",
+    "        print('합계는 ? {0}'.format(total))\n",
+    "        break\n",
+    "    else:\n",
+    "        total += int(input())\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
