--- a/test_11.ipynb
+++ b/test_11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,9 +11,13 @@
      "text": [
       "값을 입력해주세요\n",
       "20\n",
+      "값을 입력해주세요\n",
       "30\n",
       "값을 입력해주세요\n",
-      "40\n"
+      "40\n",
+      "값을 입력해주세요\n",
+      "s\n",
+      "합계는 ? 90\n"
      ]
     }
    ],
@@ -39,7 +43,7 @@
     "        print('합계는 ? {0}'.format(total))\n",
     "        break\n",
     "    else:\n",
-    "        total += int(input())\n",
+    "        total += int(input_1)\n",
     "    "
    ]
   },
