--- a/test_7.ipynb
+++ b/test_7.ipynb
@@ -32,6 +32,8 @@
     "        break\n",
     "    total += tmp\n",
     "\n",
+    "#if a not in range(101)\n",
+    "\n",
     "if tmp>0 and tmp<100: \n",
     "    if total/3 < 65 :\n",
     "        print(\"불합격\")\n",
@@ -56,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
