--- a/03. 입출력.ipynb
+++ b/03. 입출력.ipynb
@@ -67,34 +67,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "load() missing required argument 'file' (pos 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-fdb33235deeb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'./test.pkl'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfd\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: load() missing required argument 'file' (pos 1)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'김영희': {'전체': 4, '승리': 1, '비김': 2, '승률': 0.25}}\n"
      ]
     }
    ],
    "source": [
     "import pickle\n",
+    "import random\n",
     "\n",
-    "with open('./test.pkl', 'r') as fd :\n",
-    "    data = pickle.load()\n",
+    "\n",
+    "#{'김철수': {'전체': 5, '승리': 3, '비김': 1, '승률': 0.6}} 저장 형식\n",
+    "is_first = 0\n",
+    "\n",
+    "if is_first == 0 :\n",
+    "    with open('./test.pkl', 'rb') as fd :\n",
+    "        data = pickle.load(fd)\n",
     "\n",
     "print(data)\n",
-    "    \n",
-    "with open('./test.pkl', 'wb') as f:\n",
-    "    pickle.dump(data, f)\n",
     "\n",
+    "#import sys\n",
+    "#sys.exit(1)\n",
+    "\n",
+    "\n",
+    "game_list = [\"가위\",\"바위\",\"보\"]\n",
+    "result_dict = {'전체' : 0, '승리' : 0, '비김' : 0}\n",
+    "total = 0\n",
+    "\n",
+    "user_list = {}\n",
+    "user_name = input()\n",
+    "\n",
+    "if user_name not in user_list :\n",
+    "    user_list[user_name] ={'전체': 0,'승리': 0,'비김': 0,'승률': 0,}\n",
+    "#user_name 확인\n",
+    "\n",
+    "\n",
+    "while(1):\n",
+    "    \n",
+    "    print(\"가위(1), 바위(2), 보(3) 을 입력해주세요! :\")\n",
+    "    user = int(input())\n",
+    "    if user>= 1 and user <=3:\n",
+    "        result_dict['전체'] +=1\n",
+    "        computer = random.randint(1,3)\n",
+    "        print('유저 : {0}, 컴퓨터 : {1}'.format(game_list[user-1],game_list[computer-1]))\n",
+    "        if user == computer :\n",
+    "            result_dict['비김'] +=1\n",
+    "        elif user == 1 and computer == 3 :\n",
+    "            result_dict['승리'] +=1\n",
+    "        elif user == 2 and computer == 1 :\n",
+    "            result_dict['승리'] +=1\n",
+    "        elif user == 3 and computer == 2 :\n",
+    "            result_dict['승리'] +=1\n",
+    "        \n",
+    "    else :\n",
+    "        print('게임종료 (전체:{0}, 승리:{1}, 비김:{2})'.format(result_dict['전체'],result_dict['승리'],result_dict['비김']))\n",
+    "        \n",
+    "        break\n",
+    "\n",
+    "user_list[user_name]['전체'] += result_dict['전체']\n",
+    "user_list[user_name]['승리'] += result_dict['승리']\n",
+    "user_list[user_name]['비김'] += result_dict['비김']\n",
+    "user_list[user_name]['승률']= result_dict['승리']/result_dict['전체']\n",
+    "\n",
+    "print(user_list)\n",
+    "with open('./test.pkl', 'wb') as f:\n",
+    "    pickle.dump(user_list, f)\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'김영희': {'전체': 4, '승리': 1, '비김': 2, '승률': 0.25}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('./test.pkl', 'rb') as fd :\n",
+    "        data = pickle.load(fd)\n",
+    "\n",
+    "print(data)"
    ]
   },
   {
