--- a/03. 입출력.ipynb
+++ b/03. 입출력.ipynb
@@ -69,15 +69,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'김영희': {'전체': 4, '승리': 1, '비김': 2, '승률': 0.25}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import random\n",
@@ -86,11 +78,14 @@
     "#{'김철수': {'전체': 5, '승리': 3, '비김': 1, '승률': 0.6}} 저장 형식\n",
     "is_first = 0\n",
     "\n",
+    "if is_first == 1:\n",
+    "    user_list = {}\n",
+    "\n",
     "if is_first == 0 :\n",
     "    with open('./test.pkl', 'rb') as fd :\n",
     "        data = pickle.load(fd)\n",
     "\n",
-    "print(data)\n",
+    "#print(data)\n",
     "\n",
     "#import sys\n",
     "#sys.exit(1)\n",
@@ -100,11 +95,11 @@
     "result_dict = {'전체' : 0, '승리' : 0, '비김' : 0}\n",
     "total = 0\n",
     "\n",
-    "user_list = {}\n",
+    "\n",
     "user_name = input()\n",
     "\n",
     "if user_name not in user_list :\n",
-    "    user_list[user_name] ={'전체': 0,'승리': 0,'비김': 0,'승률': 0,}\n",
+    "    user_list[user_name] = {'전체': 0,'승리': 0,'비김': 0,'승률': 0,}\n",
     "#user_name 확인\n",
     "\n",
     "\n",
@@ -144,17 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'김영희': {'전체': 4, '승리': 1, '비김': 2, '승률': 0.25}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('./test.pkl', 'rb') as fd :\n",
     "        data = pickle.load(fd)\n",
