--- a/03. 입출력.ipynb
+++ b/03. 입출력.ipynb
@@ -220,15 +220,91 @@
     "다음과 같이 동작하는 프로그램을 개발하세요\n",
     "프로그램 종료후 다시 접속할때 이전이 입력됬던 값을 파일에 저장해놨다 불러와주세요\n",
     "\n",
-    "심화 수정기능개발\n"
+    "심화 수정기능개발\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "메뉴를 선택해주세요 1 - 입력, 2 - 조회, 3 - 삭제, 4 - 수정, 0 - 종료) :2\n",
+      "[0] 이름 : ㅇㅇ, 수학 : 3, 과학 : 2, 영어 : 3\n",
+      "[1] 이름 : ㅇㄹㄴ, 수학 : 2, 과학 : 3, 영어 : 2\n",
+      "[2] 이름 : 김철수, 수학 : 30, 과학 : 30, 영어 : 20\n",
+      "[3] 이름 : 김영희, 수학 : 40, 과학 : 50, 영어 : 40\n",
+      "메뉴를 선택해주세요 1 - 입력, 2 - 조회, 3 - 삭제, 4 - 수정, 0 - 종료) :3\n",
+      "삭제할 번호를 입력해주세요 :0\n",
+      "메뉴를 선택해주세요 1 - 입력, 2 - 조회, 3 - 삭제, 4 - 수정, 0 - 종료) :2\n",
+      "[0] 이름 : ㅇㄹㄴ, 수학 : 2, 과학 : 3, 영어 : 2\n",
+      "[1] 이름 : 김철수, 수학 : 30, 과학 : 30, 영어 : 20\n",
+      "[2] 이름 : 김영희, 수학 : 40, 과학 : 50, 영어 : 40\n",
+      "메뉴를 선택해주세요 1 - 입력, 2 - 조회, 3 - 삭제, 4 - 수정, 0 - 종료) :3\n",
+      "삭제할 번호를 입력해주세요 :0\n",
+      "메뉴를 선택해주세요 1 - 입력, 2 - 조회, 3 - 삭제, 4 - 수정, 0 - 종료) :2\n",
+      "[0] 이름 : 김철수, 수학 : 30, 과학 : 30, 영어 : 20\n",
+      "[1] 이름 : 김영희, 수학 : 40, 과학 : 50, 영어 : 40\n",
+      "메뉴를 선택해주세요 1 - 입력, 2 - 조회, 3 - 삭제, 4 - 수정, 0 - 종료) :0\n",
+      "종료되었습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "data_exist = 1\n",
+    "\n",
+    "if data_exist == 1:\n",
+    "    with open('./student_score.pkl', 'rb') as fd:\n",
+    "        data = pickle.load(fd)\n",
+    "        student_data = data\n",
+    "if data_exist == 0:\n",
+    "    student_data = []\n",
+    "\n",
+    "while (1) :\n",
+    "    \n",
+    "    input_case = int(input('메뉴를 선택해주세요 1 - 입력, 2 - 조회, 3 - 삭제, 4 - 수정, 0 - 종료) :'))\n",
+    "\n",
+    "    if input_case == 1 :\n",
+    "        #print('이름 :')\n",
+    "        name = input('이름 :')\n",
+    "        math = int(input('수학 :'))\n",
+    "        science = int(input('과학 :'))\n",
+    "        english = int(input('영어 :'))\n",
+    "        student_data.append({'이름' : name, '수학' : math, '과학' : science, '영어' : english})\n",
+    "    elif input_case == 2 :\n",
+    "        for idx, stu in enumerate(student_data):\n",
+    "            print('[{0}] 이름 : {1}, 수학 : {2}, 과학 : {3}, 영어 : {4}'.format(idx, stu['이름'], stu['수학'], stu['과학'], stu['영어']))\n",
+    "    elif input_case == 3 :\n",
+    "        while(1):\n",
+    "            del_num = int(input('삭제할 번호를 입력해주세요 :'))\n",
+    "            if len(student_data)<del_num :\n",
+    "                print('그런 학생은 없어')\n",
+    "            else:\n",
+    "                student_data.pop(del_num)\n",
+    "                break\n",
+    "    elif input_case == 4 :\n",
+    "        modi_num = int(input('수정할 번호를 입력해주세요 :'))\n",
+    "        print('다음과 같은 데이터가 검색되었습니다. \\n[{0}] 이름 : {1}, 수학 : {2}, 과학 : {3}, 영어 : {4}'.format(modi_num, student_data[modi_num]['이름'], student_data[modi_num]['수학'], student_data[modi_num]['과학'], student_data[modi_num]['영어']))\n",
+    "        modi, modi_score = input('수정할 항목과 수정내용을 입력해주세요(ex수학 20) :').split(' ')\n",
+    "        student_data[modi_num][modi] = int(modi_score)\n",
+    "        print('반영되었습니다. \\n[{0}] 이름 : {1}, 수학 : {2}, 과학 : {3}, 영어 : {4}'.format(modi_num, student_data[modi_num]['이름'], student_data[modi_num]['수학'], student_data[modi_num]['과학'], student_data[modi_num]['영어']))\n",
+    "\n",
+    "        #[0] 이름 : 이민호, 수학 : 40, 과학 : 50, 영어 : 30\n",
+    "    elif input_case == 0 :\n",
+    "        print('종료되었습니다.')\n",
+    "        break\n",
+    "    else:\n",
+    "        print('이상한 숫자 입력하지마 이자식아')\n",
+    "\n",
+    "with open('./student_score.pkl', 'wb') as fd:\n",
+    "        pickle.dump(student_data, fd)"
+   ]
   }
  ],
  "metadata": {
@@ -236,18 +312,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
