--- a/test_16.ipynb
+++ b/test_16.ipynb
@@ -49,6 +49,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a리스트의 값을 입력하시지요 예시 : 10 20\n",
+      "1 2\n",
+      "b리스트의 값을 입력하시지요 예시 : 10 20\n",
+      "3 4\n",
+      "a리스트의 값을 입력하시지요 예시 : 10 20\n",
+      "5 6\n",
+      "b리스트의 값을 입력하시지요 예시 : 10 20\n",
+      "7 8\n",
+      "a리스트의 값을 입력하시지요 예시 : 10 20\n",
+      "9 10\n",
+      "b리스트의 값을 입력하시지요 예시 : 10 20\n",
+      "11 12\n",
+      "[[3, 8], [7, 16], [11, 24], [15, 24], [35, 48], [55, 72], [27, 40], [63, 80], [99, 120]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "심화 2X3 리스트 a, b를 사용자로부터 입력받아 두 값을 곱해 새로운 리스트 C 를 만드세요\n",
+    "\n",
+    "'''\n",
+    "a= []\n",
+    "b= []\n",
+    "for i in range(3):\n",
+    "    print('a리스트의 값을 입력하시지요 예시 : 10 20')    \n",
+    "    a1,a2 = input().split(' ')\n",
+    "    a.append([int(a1), int(a2)])\n",
+    "    print('b리스트의 값을 입력하시지요 예시 : 10 20')    \n",
+    "    b1,b2 = input().split(' ')\n",
+    "    b.append([int(b1), int(b2)])\n",
+    "c = [[q*e, w*r] for q,w in a for e,r in b]\n",
+    "print(c)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
