--- a/06. 예외처리.ipynb
+++ b/06. 예외처리.ipynb
@@ -1,41 +1,42 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "안생김\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"안생김\")"
+    "# 06. 예외처리\n",
+    "\n",
+    "## 예제만 풀어보자..끙..\n",
+    "\n",
+    "### 특정예외만 처리\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "얼어디지겠다\n",
-      "얼어디지겠다\n",
-      "얼어디지겠다\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "print(\"얼어디지겠다\")\n",
-    "print(\"얼어디지겠다\")\n",
-    "print(\"얼어디지겠다\")"
+    "### 예외처리 else와 finally"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 예외 발생시키기 raise"
    ]
   },
   {
@@ -62,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
