--- a/03. 입출력.ipynb
+++ b/03. 입출력.ipynb
@@ -305,6 +305,46 @@
     "with open('./student_score.pkl', 'wb') as fd:\n",
     "        pickle.dump(student_data, fd)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 입출력 os 라이브러리\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "current_dir = os.getcwd() #현재 경로를 가져오는 함수\n",
+    "io_test_dir = os.path.join(current_dir, 'iotest') #새로운 경로 만듬\n",
+    "if not os.path.exists(io_test_dir):\n",
+    "    os.makedirs(io_test_dir)\n",
+    "#디렉토리없으면 만들어라 \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 쉘 기능 쓸 수 있는 라이브러리\n",
+    "\n",
+    "import shutil\n",
+    "\n",
+    "shutil.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
