--- a/04. 함수.ipynb
+++ b/04. 함수.ipynb
@@ -39,19 +39,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "덧셈 :  11\n",
-      "뺄셈 :  -1\n",
-      "곱셈 :  30\n",
-      "나눗셈 :  0.8333333333333334\n"
+      "덧셈 :  11 뺄셈 :  -1 곱셈 :  30 나눗셈 :  0.8333333333333334\n"
      ]
     }
    ],
    "source": [
     "def calc(a, b):\n",
-    "    print('덧셈 : ', a+b )\n",
-    "    print('뺄셈 : ', a-b )\n",
-    "    print('곱셈 : ', a*b )\n",
-    "    print('나눗셈 : ', a/b )\n",
+    "    print('덧셈 : ', a+b, '뺄셈 : ', a-b, '곱셈 : ', a*b, '나눗셈 : ', a/b )\n",
+    "\n",
     "    \n",
     "calc(5,6)"
    ]
@@ -199,6 +194,64 @@
     "    \n",
     "calc(1,2,3,4,5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## lambda 함수 -> 함수자체를 변수에 저장할 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_func = lambda x, y : x*y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_func(2,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 키워드 줄 때\n",
+    "\n",
+    "-func(a = 33, 22)\n",
+    "이런식으로 하면 에러남, 키워드 주기 시작했으면 계속줘야함 \n",
+    "func(33, b= 22) 이건 에러안남\n",
+    "\n",
+    "-가변인자는 맨 마지막에 주기\n",
+    "\n",
+    "- dict는 **, list는 *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
