--- a/06. 예외처리.ipynb
+++ b/06. 예외처리.ipynb
@@ -6,17 +6,81 @@
    "source": [
     "# 06. 예외처리\n",
     "\n",
-    "## 예제만 풀어보자..끙..\n",
+    "## 예제만 풀어보자..끙..\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dd\n",
+      "혼종오류가났어요\n",
+      "dd\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-580fd339e423>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "b = int(3)\n",
     "\n",
+    "try :\n",
+    "    print(a+b)\n",
+    "except :\n",
+    "    print('혼종오류가났어요')\n",
+    "    \n",
+    "    \n",
+    "c = input()\n",
+    "print(b+c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 특정예외만 처리\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 0으로 나눌수 없음 division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2, 3]\n",
+    "\n",
+    "try:\n",
+    "     print(10 / 0)\n",
+    "     y[5]\n",
+    "\n",
+    "except ZeroDivisionError as e:\n",
+    "     print(\"숫자를 0으로 나눌수 없음\", e)\n",
+    "except IndexError as e:\n",
+    "    print(\"잘못된 인덱스\", e)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -27,16 +91,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "예외오류발생\n",
+      "무조건 실행\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print(10 / 0)\n",
+    "except:\n",
+    "    print(\"예외오류발생\")\n",
+    "else:\n",
+    "    print(\"오류발생하지 않음\")\n",
+    "finally:\n",
+    "    print(\"무조건 실행\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 예외 발생시키기 raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "예외발생 예외강제발생\n",
+      "예외발생 나의오류\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "try:\n",
+    "    raise Exception(\"예외강제발생\")\n",
+    "except Exception as e:\n",
+    "    print(\"예외발생\", e)\n",
+    "\n",
+    "\n",
+    "class MyError(Exception):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(\"나의오류\")\n",
+    "\n",
+    "try:\n",
+    "    raise MyError\n",
+    "except Exception as e:\n",
+    "    print(\"예외발생\", e)\n"
    ]
   },
   {
