--- a/개미수열.ipynb
+++ b/개미수열.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -12,15 +12,19 @@
       "2\n",
       "\n",
       "2\n",
-      "1\n",
-      "\n"
+      "\n",
+      "11\n",
+      "2\n",
+      "11\n",
+      "1121\n",
+      "1121\n"
      ]
     }
    ],
    "source": [
     "#n = int(input())\n",
     "\n",
-    "text = '11'\n",
+    "text = '111223'\n",
     "\n",
     "def count_current(text):\n",
     "    result = ''\n",
@@ -38,8 +42,8 @@
     "        else:\n",
     "\n",
     "            if text_size-1 == i:\n",
-    "                print(text_size)\n",
-    "                print(i)\n",
+    "                #print(text_size)\n",
+    "                #print(i)\n",
     "                pass\n",
     "            else:\n",
     "                if text[i] == text[i+1]:\n",
