--- a/개미수열.ipynb
+++ b/개미수열.ipynb
@@ -83,16 +83,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fib(n) :\n",
+    "    if n == 1 or n == 2 :\n",
+    "        return 1\n",
+    "    return fib(n - 1) + fib(n - 2)\n",
+    "\n",
+    "fib(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#text = 'ddd'\n",
-    "#for i in range(len(text)):\n",
-    "#    print(i)\n",
-    "#    if text[i]== text[i+1]:\n",
-    "#        print('dd')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
