--- a/배열 데이터 NumPy.ipynb
+++ b/배열 데이터 NumPy.ipynb
@@ -1309,7 +1309,7 @@
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1536,10 +1536,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.to_csv('./filename.csv', mode='w')"
+   ]
   },
   {
    "cell_type": "code",
