--- a/백준개시키/2. 자료구조.ipynb
+++ b/백준개시키/2. 자료구조.ipynb
@@ -275,20 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "push 3\n",
-      "dd\n",
-      "push 2\n",
-      "dd\n",
-      "front\n",
-      "3\n"
+      "15\n",
+      "push 1\n",
+      "dd\n"
      ]
     }
    ],
@@ -302,7 +298,7 @@
     "for i in range(input_command_num):\n",
     "    input_command = input()\n",
     "    if input_command.startswith('push'):\n",
-    "        print('dd')\n",
+    "        \n",
     "        a,b = input_command.split()\n",
     "        queue.append(int(b))\n",
     "    elif input_command == 'pop':\n",
@@ -370,6 +366,42 @@
    "metadata": {},
    "source": [
     "### - 조세퍼스 문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= list(range(1,8))\n",
+    "\n",
+    "def pop(lis, cur_point, delta):\n",
+    "    len(lis)\n",
+    "    if cur_point + delt<len(lis):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 4, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.(3)\n",
+    "a\n",
+    "a.remove("
    ]
   },
   {
