--- a/crawling_project/naver_news_search_by_keywords-연습_2.ipynb
+++ b/crawling_project/naver_news_search_by_keywords-연습_2.ipynb
@@ -15051,7 +15051,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -15086,11 +15088,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 수업내용\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a_tag['href']\n",
+    " => ....\n",
+    "a.tag.attrs \n",
+    "\n",
+    "=>{'href': ..., 'class':[]}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 뉴스토픽 가져오기\n",
+    "\n",
+    "### contents쓰기\n",
+    "\n",
+    "### siblings 쓰기\n",
+    "\n",
+    "### find_all 쓰기(recursive_false)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### contents쓰기\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "naver_search_url = 'https://search.naver.com/search.naver'\n",
+    "qeury = '무역전쟁'\n",
+    "params = {\n",
+    "    'where' : 'news',\n",
+    "    'query' : qeury\n",
+    "}    \n",
+    "\n",
+    "resp = requests.get(naver_search_url, params = params)\n",
+    "resp.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['불법폐기물 특별수사단 발족',\n",
+       " '한선교 기자들 향해',\n",
+       " '검찰 코오롱생명과학 압수수색',\n",
+       " '국세청 사칭',\n",
+       " '대우건설 을지로시대 개막',\n",
+       " '정경두 국방',\n",
+       " '반려견 수영대회',\n",
+       " '한미 국방장관회담',\n",
+       " '서울연구원 민주연구원',\n",
+       " '유시민 홍준표']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup = BeautifulSoup(resp.content, 'html.parser')\n",
+    "div_contents= soup.find('div', class_='z_aside section').find('ol', class_ = 'lst_realtime_srch _tab_area')\n",
+    "\n",
+    "div_contents.find_all('li')\n",
+    "\n",
+    "li_tags = div_contents.contents\n",
+    "new_list = []\n",
+    "for t in li_tags :\n",
+    "    title = t.find('span', class_ = 'tit').text\n",
+    "    new_list.append(title)\n",
+    "new_list\n",
+    "#.find('span').find('span')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### siblings 쓰기\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'li_tag_text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-63-f120f9297839>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mnew_list2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mnew_list2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mli_tag_text\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mli_tag\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_next_siblings\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'li'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mnew_list2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'li_tag_text' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "li_tag = div_contents.li\n",
+    "\n",
+    "new_list2 = []\n",
+    "\n",
+    "title\n",
+    "new_list2.append(li_tag_text)\n",
+    "for x in li_tag.find_next_siblings('li'):\n",
+    "    new_list2.append(li.text)\n",
+    "new_list2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### find_all 쓰기(recursive_false)\n"
+   ]
   },
   {
    "cell_type": "code",
