--- a/crawling_project/naver_news_search_by_keywords-연습_2.ipynb
+++ b/crawling_project/naver_news_search_by_keywords-연습_2.ipynb
@@ -15248,7 +15248,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_list3 = []"
+   ]
   }
  ],
  "metadata": {
