--- a/crawling_project/paper_crawling-V_2.ipynb
+++ b/crawling_project/paper_crawling-V_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "200"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
       "Neural word embedding as implicit matrix factorization\n",
       "http://papers.nips.cc/paper/5477-neural-word-embedding-as-implicit-matrix-factorization\n",
       "Neural word embedding as implicit matrix factorization\n",
@@ -85,13 +84,39 @@
       "Semantic expansion using word embedding clustering and convolutional neural network for improving short text classification\n",
       "https://www.sciencedirect.com/science/article/pii/S0925231215014502\n",
       "Semantic expansion using word embedding clustering and convolutional neural network for improving short text classification\n",
-      "[{'title': 'Neural word embedding as implicit matrix factorization'}, {'title': '[PDF][PDF] Learning sentiment-specific word embedding for twitter sentiment classification'}, {'title': \"word2vec Explained: deriving Mikolov et al.'s negative-sampling word-embedding method\"}, {'title': 'Knowledge-powered deep learning for word embedding'}, {'title': 'Line: Large-scale information network embedding'}, {'title': 'Pharmacovigilance from social media: mining adverse drug reaction mentions using sequence labeling with word embedding cluster features'}, {'title': 'Document embedding with paragraph vectors'}, {'title': '[PDF][PDF] Dependency-based word embeddings'}, {'title': '[PDF][PDF] Learning continuous word embedding with metadata for question retrieval in community question answering'}, {'title': 'Semantic expansion using word embedding clustering and convolutional neural network for improving short text classification'}]\n"
+      "[{'link': 'http://papers.nips.cc/paper/5477-neural-word-embedding-as-implicit-matrix-factorization',\n",
+      "  'title': 'Neural word embedding as implicit matrix factorization'},\n",
+      " {'link': 'https://www.aclweb.org/anthology/P14-1146',\n",
+      "  'title': '[PDF][PDF] Learning sentiment-specific word embedding for twitter '\n",
+      "           'sentiment classification'},\n",
+      " {'link': 'https://arxiv.org/abs/1402.3722',\n",
+      "  'title': \"word2vec Explained: deriving Mikolov et al.'s negative-sampling \"\n",
+      "           'word-embedding method'},\n",
+      " {'link': 'https://link.springer.com/chapter/10.1007/978-3-662-44848-9_9',\n",
+      "  'title': 'Knowledge-powered deep learning for word embedding'},\n",
+      " {'link': 'https://dl.acm.org/citation.cfm?id=2741093',\n",
+      "  'title': 'Line: Large-scale information network embedding'},\n",
+      " {'link': 'https://academic.oup.com/jamia/article-abstract/22/3/671/776531',\n",
+      "  'title': 'Pharmacovigilance from social media: mining adverse drug reaction '\n",
+      "           'mentions using sequence labeling with word embedding cluster '\n",
+      "           'features'},\n",
+      " {'link': 'https://arxiv.org/abs/1507.07998',\n",
+      "  'title': 'Document embedding with paragraph vectors'},\n",
+      " {'link': 'https://www.aclweb.org/anthology/P14-2050',\n",
+      "  'title': '[PDF][PDF] Dependency-based word embeddings'},\n",
+      " {'link': 'https://www.aclweb.org/anthology/P15-1025',\n",
+      "  'title': '[PDF][PDF] Learning continuous word embedding with metadata for '\n",
+      "           'question retrieval in community question answering'},\n",
+      " {'link': 'https://www.sciencedirect.com/science/article/pii/S0925231215014502',\n",
+      "  'title': 'Semantic expansion using word embedding clustering and '\n",
+      "           'convolutional neural network for improving short text '\n",
+      "           'classification'}]\n"
      ]
     }
    ],
    "source": [
     "raw_paper_list_box = soup.find('div',id=\"gs_res_ccl_mid\")\n",
-    "print(len(raw_paper_list))\n",
+    "#print(len(raw_paper_list))\n",
     "paper_list = []\n",
     "\n",
     "raw_paper_list = raw_paper_list_box.find_all('div', class_=\"gs_r gs_or gs_scl\")\n",
@@ -99,33 +124,35 @@
     "for paper in raw_paper_list:\n",
     "    paper_dict = {}\n",
     "    title = paper.find('h3',class_= 'gs_rt')\n",
-    "    a_tag = paper.find('a')\n",
-    "    \n",
+    "\n",
     "    a_tag = paper.find(class_=\"gs_ri\").find('a')\n",
     "    link = a_tag['href']\n",
+    "    \n",
     "    print(title.text)\n",
     "    print(link)\n",
     "    paper_dict['title']= title.text\n",
+    "    paper_dict['link']= link\n",
     "    print(title.text)\n",
     "    \n",
     "    paper_list.append(paper_dict)\n",
     "#     break\n",
     "#print(len(paper_list))\n",
-    "print(paper_list)"
+    "pprint(paper_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'title': '[PDF][PDF] Learning sentiment-specific word embedding for twitter sentiment classification'}"
+       "{'title': '[PDF][PDF] Learning sentiment-specific word embedding for twitter sentiment classification',\n",
+       " 'link': 'https://www.aclweb.org/anthology/P14-1146'}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_link = 'https://www.sciencedirect.com/science/article/pii/S0925231215014502'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +181,7 @@
        "ParseResult(scheme='https', netloc='www.sciencedirect.com', path='/science/article/pii/S0925231215014502', params='', query='', fragment='')"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,8 +189,7 @@
    "source": [
     "import urllib\n",
     "\n",
-    "parse_link = urllib.parse.urlparse(link)\n",
-    "parse_link"
+    "parse_link = urllib.parse.urlparse(sample_link)\n"
    ]
   },
   {
@@ -163,7 +198,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "www.sciencedirect.com/science/article/pii/S0925231215014502"
+    "url = \"https://blog.naver.com/PostView.nhn\"\n",
+    "\n",
+    "params = {\n",
+    "    'blogId': blogid,\n",
+    "    'logNo': log_id\n",
+    "}\n",
+    "\n",
+    "resp = requests.get(url, params=params)"
    ]
   }
  ],
